--- a/Fen_frequencies.ipynb
+++ b/Fen_frequencies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -35,125 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw3/1nw3SE1SE/nw1nw3SW1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw3/1nw3SE1SE/nw1nw3SW1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw3/1nw3SE1SE/nw1nw3SW1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw3/1nw3SE1SE/nw1nw3SW1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw1SE1/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n",
-      "0 ss3nw3/3nw4/2nw1nw2SE/1nw3SE2/nw1nw3SE1/3SE1SE2/4SE3/3SE3NN W\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fen_counts = dict()\n",
     "\n",
@@ -175,14 +61,13 @@
     "        content = f.readlines()\n",
     "    content = [x.strip() for x in content] \n",
     "    for i,v in enumerate(content):\n",
-    "        if i == 0:\n",
-    "            print i, v\n",
-    "            increment_ctr(fen_counts, v)      "
+    "        #print i, v\n",
+    "        increment_ctr(fen_counts, v)      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
